Add Google AdSense integration for web monetization

--- a/Documents/development/flutter project/travely/web/index.html
+++ b/Documents/development/flutter project/travely/web/index.html
@@ -21,7 +21,7 @@
 
     <!-- Primary Meta Tags -->
     <title>트래블리 - 나만의 여행 MBTI</title>
-    <meta name="title" content="트래블리 - 나만의 여행 MBTI" />
+    <meta name="google-adsense-account" content="ca-pub-1950883290435736" />
     <meta
       name="description"
       content="16개 질문으로 알아보는 나의 여행 성향 테스트. 당신만의 여행 MBTI를 발견하고 맞춤 여행지를 추천받아보세요!"
@@ -84,6 +84,16 @@
     <meta name="theme-color" content="#4A90D9" />
     <meta name="msapplication-TileColor" content="#4A90D9" />
     <meta name="msapplication-navbutton-color" content="#4A90D9" />
+
+    <!-- Google AdSense - 사이트 소유권 확인 -->
+    <meta name="google-adsense-account" content="ca-pub-1950883290435736" />
+
+    <!-- Google AdSense - 자동 광고 -->
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1950883290435736"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
